--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "discord-welcome-bot",
+  "name": "falcon-discord-bot",
   "version": "1.0.0",
-  "description": "A Discord bot that sends a private welcome message to new members.",
+  "description": "Discord bot for Falcon server with Express web server",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2"
-  }
+    "discord.js": "^14.13.0",
+    "express": "^4.18.2",
+    "dotenv": "^16.0.3"
+  },
+  "engines": {
+    "node": ">=16.6.0"
+  },
+  "author": "",
+  "license": "ISC"
 }
